# peekdocs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_i18n.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build_app.py  dashboard.html  docsearch_results.docx  docsearch_results.txt  employee_data.csv  meeting_notes.odt  peekdocs_results.docx  peekdocs_results.txt  project_log.txt  pyproject.toml  quarterly_report.docx  requirements-pinned.txt  requirements.txt  sales_data.xlsx  test_file.csv  test_file.docx  test_file.html  test_file.odt  test_file.xlsx  test_gui_debug.py
.github/: dependabot.yml
.github/workflows/: auto-tag-on-version-bump.yml  build-release.yml  dco.yml  test.yml
SearchTheseDocuments/source-code/: CMakeLists.cmake  build.gradle  database.properties  nginx.conf
docs/: API.md  ARCHITECTURE.md  COMPLIANCE_GUIDE.md  GLOSSARY.md  INSTALLATION.md  INSTALL_SAFETY.md  LOCAL_AI_SETUP.md  RELEASE_CHECKLIST.md  SECURITY.md  SMOKE_TEST.md  TROUBLESHOOTING.md  USER_GUIDE.md  WALKTHROUGHS.md
docs/images/: peekdocs-snapshot-todo-after.json  peekdocs-snapshot-todo-before.json
docsearch/: __init__.py  __main__.py  api.py  cli.py  collection.py  compliance_templates.py  constants.py  email_alert.py  expr_parser.py  gui.py  indexer.py  parser.py  range_query.py  reporter.py  scanner.py  search_assistant.py  sensitive_patterns.py  translator.py  wizard_patterns.py
experiments/web-phase0/: README.md
experiments/web-phase0/backend/: requirements.txt  server.py
experiments/web-phase0/frontend/: index.html  package-lock.json  package.json  vite.config.ts
experiments/web-phase0/frontend/src/: App.tsx  api.ts  highlight.tsx  i18n.ts  style.css
experiments/web-phase0/frontend/src/components/: AboutModal.tsx  AdvancedOptions.tsx  AllFilesModal.tsx  BookmarksModal.tsx  ClearFilesModal.tsx  DiffSnapshotsModal.tsx  Footer.tsx  Header.tsx  HelpModal.tsx  IndexesModal.tsx  Modal.tsx  RegexCollectionsModal.tsx  RegexTesterModal.tsx  ReloadSearchModal.tsx  ResultsPanel.tsx  SaveSearchModal.tsx  ScheduleSearchModal.tsx  SearchHistoryModal.tsx  SearchPanel.tsx  Splitter.tsx  SuitesModal.tsx  SystemCheckModal.tsx  ToolsModal.tsx  Tooltip.tsx  WizardModal.tsx
peekdocs/: __init__.py  __main__.py  api.py  cli.py  collection.py  constants.py  diff.py  errors.py  expr_parser.py  gui.py  i18n.py  indexer.py  mcp_server.py  mcp_setup.py  notifier.py  parser.py  paths.py  range_query.py  regex_examples.py  reporter.py  run_log.py  scanner.py  sensitive_patterns.py  suite_index.py  translator.py  watcher.py  wizard_patterns.py
peekdocs/commands/: __init__.py  check.py  clear.py  diff.py  list_files.py  list_suites.py  runs.py
peekdocs/gui/: __init__.py  _app.py  _cli_runner.py  _cloud_guard.py  _dialogs.py  _error_guard.py  _helpers.py  _mixin_build.py  _mixin_data.py  _mixin_file_analysis.py  _mixin_help_panels.py  _mixin_regex_search.py  _mixin_search.py  _mixin_suites.py  _mixin_tools.py  _mixin_wizard.py  _tooltip.py
samples/: api_example.py  peekdocs_generate_demo_consulting.py  peekdocs_regex_collection_code_patterns.json  peekdocs_regex_collection_log_triage.json  peekdocs_suite_collection_code_hygiene.json  peekdocs_suite_collection_quarterly_audit.json  regex_wizard_sample.txt
samples/demo/: 2024_tax_return.docx  bank_email_2024.txt  family_contacts.csv  homeowners_insurance.docx  medical_visit_oct2024.docx  my_accounts.txt
samples/engineering_test/: sample.asm  sample.bat  sample.c  sample.cir  sample.cpp  sample.cs  sample.dxf  sample.f  sample.f90  sample.go  sample.h  sample.hpp  sample.java  sample.js  sample.key  sample.kt  sample.m  sample.makefile  sample.numbers  sample.pl  sample.ps1  sample.py  sample.r  sample.rb  sample.rs  sample.s  sample.sh  sample.sp  sample.spice  sample.sv  sample.swift  sample.tcl  sample.ts  sample.v  sample.vb  sample.vhd  sample.vhdl  sample.vsdx
samples/multilingual/: README.md  arabic_contract.docx  chinese_financial_report.docx  greek_quarterly_report.docx  multilingual_budget_report.txt  spanish_invoice.docx
samples/test-files/: Dockerfile  Makefile  peekdocs_global_test.sh  peekdocs_global_test_unix.sh  peekdocs_global_test_windows.ps1  sample.7z  sample.asm  sample.bat  sample.bz2  sample.c  sample.cfg  sample.cir  sample.cmake  sample.conf  sample.cpp  sample.cs  sample.css  sample.csv  sample.doc  sample.docx  sample.dxf  sample.eml  sample.env  sample.epub  sample.f  sample.f90  sample.go  sample.gql  sample.gradle  sample.graphql  sample.h  sample.hpp  sample.html  sample.ics  sample.ini  sample.ipynb  sample.java  sample.js  sample.json  sample.jsonl  (+57 more)
scripts/: check_doc_links.py
tests/: conftest.py  language_test.py  run_api_checks.py  test_api.py  test_api_inventory.py  test_cli.py  test_cloud_guard.py  test_collection.py  test_error_guard.py  test_errors.py  test_exclusion.py  test_expr_parser.py  test_gui.py  test_headless.py  test_mcp_server.py  test_mcp_setup.py  test_ocr_integration.py  test_paths.py  test_pii_patterns.py  test_range_query.py  test_smoke_cli.py  test_stderr_streamer.py  test_suite_index.py  test_suites.py  test_translator.py  test_watcher.py  test_wizard.py
