[build-system]
# setuptools >= 77.0 required for native PEP 639 `license-files`
# support — used below to ship LICENSE + NOTICE + THIRD_PARTY_NOTICES.md
# inside the wheel and surface them on PyPI's project page.
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peekdocs"
version = "1.2.28"
description = "Privacy-first local document search and analysis platform for Windows, macOS, and Linux. Search 100+ file types using keyword, fuzzy, OCR, and advanced regex workflows. Batch analysis, highlighted reports, automated reporting, reusable search profiles. CLI, GUI, and Python API. Free and open-source under the MIT license."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
    "Topic :: Security",
]
keywords = [
    # English (primary)
    "document-search", "file-search", "text-search", "pdf-search", "docx",
    "offline", "offline-search", "privacy", "cli", "gui", "batch-search",
    "document-scanner",
    # Multilingual discovery terms — non-English speakers searching PyPI
    # in their own language have a chance of finding peekdocs without
    # needing to translate "document search" to English first. The UI
    # is partially translated to these languages; see README.
    # Spanish
    "busqueda-documentos", "busqueda-archivos",
    # French
    "recherche-documents", "recherche-fichiers",
    # German
    "dokumentensuche", "dateisuche",
    # Japanese (kanji)
    "文書検索",
    # Simplified Chinese (kanji)
    "文档搜索", "全文检索",
    # Brazilian Portuguese
    "busca-documentos", "busca-arquivos",
]
license = "MIT"
# PEP 639: ship LICENSE (peekdocs's own MIT terms), NOTICE (the Apache-
# convention pointer file), and THIRD_PARTY_NOTICES.md (per-dependency
# license listing including the AGPL / GPL / LGPL copyleft tier) inside
# the built wheel. PyPI surfaces these on the project page sidebar so a
# license-compliance reviewer can find them without leaving pypi.org.
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]
readme = "README.md"
authors = [{name = "Robert D. Schoening", email = "bobschoening@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.0,<2.0",
    "PyMuPDF>=1.20,<2.0",
    "odfpy>=1.4,<2.0",
    "openpyxl>=3.1,<4.0",
    "striprtf>=0.0.20,<1.0",
    "python-pptx>=1.0,<2.0",
    "EbookLib>=0.18,<1.0",
    "Pillow>=10.0,<13.0",
    "pytesseract>=0.3,<1.0",
    "rapidfuzz>=3.0,<4.0",
    "customtkinter>=5.2,<6.0",
    "olefile>=0.46,<1.0",
    "xlrd>=2.0,<3.0",
    "extract-msg>=0.40,<1.0",
    "py7zr>=1.0,<2.0",
    "rarfile>=4.0,<5.0",
    "fpdf2>=2.7,<3.0",
    "watchdog>=4.0,<7.0",
    "matplotlib>=3.7,<4.0",
]

[project.urls]
Homepage = "https://github.com/exbuf/peekdocs"
Documentation = "https://github.com/exbuf/peekdocs/blob/main/docs/USER_GUIDE.md"
Repository = "https://github.com/exbuf/peekdocs"
"Bug Tracker" = "https://github.com/exbuf/peekdocs/issues"
Changelog = "https://github.com/exbuf/peekdocs/blob/main/CHANGELOG.md"
"Third-Party Notices" = "https://github.com/exbuf/peekdocs/blob/main/THIRD_PARTY_NOTICES.md"

[project.optional-dependencies]
pst = ["libpff-python"]

[tool.setuptools.packages.find]
include = ["peekdocs*"]

[project.scripts]
peekdocs = "peekdocs.cli:main"
peekdocs-gui = "peekdocs.gui:main"
