[build-system]
# setuptools >= 77.0 required for native PEP 639 `license-files`
# support — used below to ship LICENSE + NOTICE + THIRD_PARTY_NOTICES.md
# inside the wheel and surface them on PyPI's project page.
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peekdocs"
version = "1.2.78"
description = "Privacy-first local document search and analysis platform for Windows, macOS, and Linux. Search 100+ file types using keyword, fuzzy, OCR, and advanced regex workflows. Batch analysis, highlighted reports, automated reporting, reusable search profiles. CLI, GUI, and Python API. Free and open-source under the MIT license."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
    "Topic :: Security",
]
keywords = [
    # English (primary)
    "document-search", "file-search", "text-search", "pdf-search", "docx",
    "offline", "offline-search", "privacy", "cli", "gui", "batch-search",
    "document-scanner",
    # Multilingual discovery terms — non-English speakers searching PyPI
    # in their own language have a chance of finding peekdocs without
    # needing to translate "document search" to English first. The UI
    # is partially translated to these languages; see README.
    # Spanish
    "busqueda-documentos", "busqueda-archivos",
    # French
    "recherche-documents", "recherche-fichiers",
    # German
    "dokumentensuche", "dateisuche",
    # Japanese (kanji)
    "文書検索",
    # Simplified Chinese (kanji)
    "文档搜索", "全文检索",
    # Brazilian Portuguese
    "busca-documentos", "busca-arquivos",
]
license = "MIT"
# PEP 639: ship LICENSE (peekdocs's own MIT terms), NOTICE (the Apache-
# convention pointer file), and THIRD_PARTY_NOTICES.md (per-dependency
# license listing including the AGPL / GPL / LGPL copyleft tier) inside
# the built wheel. PyPI surfaces these on the project page sidebar so a
# license-compliance reviewer can find them without leaving pypi.org.
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]
readme = "README.md"
authors = [{name = "Robert D. Schoening", email = "bobschoening@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.0,<2.0",
    "PyMuPDF>=1.20,<2.0",
    "odfpy>=1.4,<2.0",
    "openpyxl>=3.1,<4.0",
    "striprtf>=0.0.20,<1.0",
    "python-pptx>=1.0,<2.0",
    "EbookLib>=0.18,<1.0",
    "Pillow>=10.0,<13.0",
    "pytesseract>=0.3,<1.0",
    "rapidfuzz>=3.0,<4.0",
    "customtkinter>=5.2,<6.0",
    "olefile>=0.46,<1.0",
    "xlrd>=2.0,<3.0",
    "extract-msg>=0.40,<1.0",
    "py7zr>=1.0,<2.0",
    "rarfile>=4.0,<5.0",
    "fpdf2>=2.7,<3.0",
    "watchdog>=4.0,<7.0",
    "matplotlib>=3.7,<4.0",
]

[project.urls]
Homepage = "https://github.com/exbuf/peekdocs"
Documentation = "https://github.com/exbuf/peekdocs/blob/main/docs/USER_GUIDE.md"
Repository = "https://github.com/exbuf/peekdocs"
"Bug Tracker" = "https://github.com/exbuf/peekdocs/issues"
Changelog = "https://github.com/exbuf/peekdocs/blob/main/CHANGELOG.md"
"Third-Party Notices" = "https://github.com/exbuf/peekdocs/blob/main/THIRD_PARTY_NOTICES.md"

[project.optional-dependencies]
pst = ["libpff-python"]

[tool.setuptools.packages.find]
include = ["peekdocs*"]

[project.scripts]
peekdocs = "peekdocs.cli:main"
peekdocs-gui = "peekdocs.gui:main"

# ── mypy — type-checker configuration ─────────────────────────
#
# Scope: peekdocs's public + top-level surfaces — the files that
# consumers directly touch (import the API, run the CLI, read
# generated reports). Not the whole codebase; adding hints
# everywhere is a separate effort tracked in docs/ARCHITECTURE.md's
# known-weaknesses list.
#
# Files intentionally in scope:
#   peekdocs/api.py       — the public library API (search,
#                           run_suite, run_regex_collection, list_*,
#                           dataclasses)
#   peekdocs/paths.py     — resource_path + find_tesseract helpers
#   peekdocs/reporter.py  — TXT / DOCX / CSV / JSON / PDF / HTML
#                           report writers (consumed by cli.py and
#                           anyone extending output formats)
#   peekdocs/cli.py       — main() entrypoint + top-level helpers
#
# The `files` list is authoritative — mypy will only check these
# unless the caller passes explicit paths. CI runs `mypy` bare
# (no path args), so this list determines what gets checked.
#
# `ignore_missing_imports = true` handles third-party libraries
# without stubs (fitz/PyMuPDF, odfpy, openpyxl, ebooklib, olefile,
# xlrd, pypff, rarfile, pytesseract). Those show up transitively
# via scanner.py imports. Installing stubs for all of them (many
# of which don't ship them) would be a lot of yak-shaving for
# marginal type-safety gain.
[tool.mypy]
python_version = "3.10"
files = ["peekdocs/api.py", "peekdocs/paths.py", "peekdocs/reporter.py", "peekdocs/cli.py", "peekdocs/errors.py"]
ignore_missing_imports = true
# follow_imports = "skip" — don't follow imports into other files at
# all. Scope of this mypy check is deliberately just api.py + paths.py
# — the two files with hints. Following imports would surface issues
# in the untyped rest of the codebase (which is a known-weaknesses
# item, tracked separately) AND choke on third-party stub files that
# use Python 3.12+ `type` statement syntax (numpy's own stubs at
# site-packages/numpy/__init__.pyi:737 are the canonical example —
# they hit an unrecoverable syntax error under python_version = "3.10"
# because PEP 695 `type X = Y` didn't exist in 3.10). "skip" means
# mypy doesn't try to parse imported files at all, avoiding both
# problems. Trade-off: calls into imported code lose type info, but
# for our narrow public-API-signature scope this is fine.
follow_imports = "skip"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
# Do NOT set disallow_untyped_defs — the checked files reference
# helpers in scanner.py / indexer.py that are intentionally
# untyped for now. Blanket require-hints would surface those as
# errors even though they're outside the checked scope.
